| Summary: | ASTERISK-29904: RLS: Batched Notifications stop working | ||
| Reporter: | Alexei Gradinari (alexei gradinari) | Labels: | |
| Date Opened: | 2022-02-07 16:20:10.000-0600 | Date Closed: | 2022-02-23 15:30:29.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_pubsub |
| Versions: | 16.23.0 18.9.0 19.1.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | If Subscription refresh occurred between when the batched notification was scheduled and the serialized notification was to be sent, then new schedule notification task would never be added.
There are 2 threads: thread #1. ast_sip_subscription_notify is called, if notification_batch_interval then call schedule_notification. 1.1. The schedule_notification checks notify_sched_id > -1 not true, then send_scheduled_notify = 1 notify_sched_id = ast_sched_add(sched, sub_tree->notification_batch_interval, sched_cb.... 1.2. The sched_cb pushes task serialized_send_notify to serializer and returns 0 which means no reschedule. 1.3. The serialized_send_notify checks send_scheduled_notify if it's false the just returns. BUT notify_sched_id is still set, so no more ast_sched_add. thread #2. pubsub_on_rx_refresh is called 2.1 it pushes serialized_pubsub_on_refresh_timeout to serializer 2.2. The serialized_pubsub_on_refresh_timeout calls pubsub_on_refresh_timeout which calls send_notify 2.3. The send_notify set send_scheduled_notify = 0; The serialized_send_notify should always unset notify_sched_id. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-02-07 16:20:11.572-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-02-23 15:30:30.170-0600 Change 18006 merged by Friendly Automation: res_pjsip_pubsub: fix Batched Notifications stop working [https://gerrit.asterisk.org/c/asterisk/+/18006|https://gerrit.asterisk.org/c/asterisk/+/18006] By: Friendly Automation (friendly-automation) 2022-02-23 15:41:06.322-0600 Change 17995 merged by Friendly Automation: res_pjsip_pubsub: fix Batched Notifications stop working [https://gerrit.asterisk.org/c/asterisk/+/17995|https://gerrit.asterisk.org/c/asterisk/+/17995] By: Friendly Automation (friendly-automation) 2022-02-23 16:09:36.184-0600 Change 17996 merged by Friendly Automation: res_pjsip_pubsub: fix Batched Notifications stop working [https://gerrit.asterisk.org/c/asterisk/+/17996|https://gerrit.asterisk.org/c/asterisk/+/17996] By: Friendly Automation (friendly-automation) 2022-02-23 16:09:50.222-0600 Change 17997 merged by Friendly Automation: res_pjsip_pubsub: fix Batched Notifications stop working [https://gerrit.asterisk.org/c/asterisk/+/17997|https://gerrit.asterisk.org/c/asterisk/+/17997] | ||